# corbaExample

./: CMakeLists.txt  Servant.cpp  Servant.h  client.cpp  server.cpp
idl/: object.idl
